--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,28 @@ body {
     background-color: #FFFFFF;
 }
 
+h2 {
+    font-size: 36px;
+    font-weight: bold;
+    line-height: 40px;
+    color: #2E2F42;
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    color: #2E2F42;
+}
+
+p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 2%;
+
+}
+
 a {
     text-decoration: none;
 }
@@ -15,6 +37,11 @@ ul {
 nav li, a {
     color: #2E2F42;
 }
+
+nav>a {
+    text-transform: uppercase;
+}
+
 nav span {
     color: #4D5AE5;
 }
