--- a/css/styles.css
+++ b/css/styles.css
@@ -13,16 +13,16 @@ h2 {
 
 h3 {
     font-size: 20px;
-    font-weight: 500;
-    line-height: 24px;
+    letter-spacing: 0.02em;
+    line-height: 1.2;
     color: #2E2F42;
 }
 
 p {
     font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 2%;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
 
 }
 
@@ -59,8 +59,8 @@ address li {
     color:#FFFFFF;
     font-size: 56px;
     font-weight: bold;
-    line-height: 60px;
-    letter-spacing: 2%;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 
 .hero button {
